# rust-galaga

./: .gitignore  1  build.py  index.html
asset/: cube.dae  plane.dae
build_utils/: asset_index.py  asset_packet.py  packager.py
src/: Cargo.toml
src/.cargo/: config  emcc_sdl
src/asset_gen/: Cargo.toml
src/asset_gen/src/: bench.rs  gl_binding.rs  lib.rs  path.rs  utils.rs
src/asset_gen/tests/: integration_tests.rs
src/game/: Cargo.toml
src/game/src/: main.rs
src/render/: Cargo.toml
src/render/src/: asset.rs  asset_index.rs  gl_error.rs  lib.rs  material.rs  mesh_shader.rs  shader.rs  sprite_shader.rs  texture.rs  vbo.rs  window.rs  window_instance.rs
