[package]
name = "asset_gen"
version = "0.1.0"
authors = ["oleg <o.tolstov1569@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.85",features=["full","fold"]}
quote = "1.0.14"
proc-macro2="1.0.36"
