[package]
name = "game"
version = "0.1.0"
authors = ["oleg <o.tolstov1569@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { git="https://github.com/Rust-SDL2/rust-sdl2.git", branch="master", default-features = false, features = ["unsafe_textures"] }
nalgebra-glm = "0.8"
emscripten_main_loop = "0.1"
render = {path = "../render"}
